# dg-bot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/plugins/dg_trpg/: __init__.py  config.py
src/plugins/dg_trpg/core/: api_client.py  auth.py  cache_validator.py  context.py  errors.py  formatters.py  models.py  permissions.py  state.py
src/plugins/dg_trpg/plugins/: admin.py  buff.py  cache_admin.py  character.py  communication.py  dice.py  event_check.py  game_setup.py  item.py  location.py  region.py  session.py  timeline.py
tests/: conftest.py
tests/unit/: conftest.py
tests/unit/core/: test_api_client.py  test_errors.py  test_formatters.py  test_models.py  test_state.py
tests/unit/plugins/: test_admin.py  test_dice.py
