[project]
name = "dg-bot"
version = "0.1.4"
description = "dg-bot"
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "nonebot2[fastapi,websockets]>=2.4.4",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-plugin-localstore>=0.6.0",
    "httpx>=0.27.0",
    "pytest>=9.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short"
markers = [
    "unit: 单元测试，无外部依赖",
    "integration: 集成测试，需要运行中的 dg-core",
    "slow: 耗时较长的测试",
]

[tool.nonebot]
plugin_dirs = ["src/plugins"]
builtin_plugins = []

[tool.nonebot.adapters]
nonebot-adapter-onebot = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
"@local" = []

[tool.nonebot.plugins]
"@local" = []
